imclient/marslib/include/WFClient.h



extern "C" PROTOWRAPPER_API void WFCAPI releaseDllString(const char *dllString);


//Global callback
typedef void (WFCAPI *fun_global_string_callback)(const char *cstr, size_t str_len);

typedef void (WFCAPI *fun_global_int_int_callback)(int value1, int value2);

typedef void (WFCAPI *fun_global_int_sring_callback)(int intValue, const char *cstr, size_t str_len);

typedef void (WFCAPI *fun_global_void_callback)();


typedef void (WFCAPI *fun_connection_callback)(int connectionStatus);

typedef void (WFCAPI *fun_receive_message_callback)(const char *cmessages, size_t messages_len, bool moreMsg);

typedef void (WFCAPI *fun_recall_message_callback)(const char *coperatorId, size_t operatorId_len, int64_t messageUid);

typedef void (WFCAPI *fun_delete_message_callback)(int64_t messageUid);


typedef void (WFCAPI *fun_connecting_to_server_callback)(const char *chost, size_t host_len, const char *cip, size_t ip_len);

typedef void (WFCAPI *fun_connected_to_server_callback)(const char *chost, size_t host_len, const char *cip, size_t ip_len, int nwType);


extern "C" PROTOWRAPPER_API void WFCAPI setAppName(const char *cappName, size_t appName_len);


extern "C" PROTOWRAPPER_API void WFCAPI setHeartBeatInterval(int second);


extern "C" PROTOWRAPPER_API void WFCAPI setAppDataPath(const char *cpath, size_t path_len);


extern "C" PROTOWRAPPER_API void WFCAPI setPackageName(const char *cpackagename, size_t packagename_len);


extern "C" PROTOWRAPPER_API void WFCAPI useDataVerify(bool enabled);


extern "C" PROTOWRAPPER_API void WFCAPI useEncryptMaxMinutes(int minutes);


extern "C" PROTOWRAPPER_API void WFCAPI setUseKcp(int kcpPort, bool useKcp);


extern "C" PROTOWRAPPER_API bool WFCAPI isUseKcp();


extern "C" PROTOWRAPPER_API void WFCAPI useTls(bool skipVerifyCert, const char** ccerts, const size_t* certLengths, size_t certCount);


extern "C" PROTOWRAPPER_API void WFCAPI useSM4();


extern "C" PROTOWRAPPER_API void WFCAPI useAES256();


extern "C" PROTOWRAPPER_API void WFCAPI useTcpShortLink();


extern "C" PROTOWRAPPER_API bool WFCAPI isTcpShortLink();


extern "C" PROTOWRAPPER_API void WFCAPI setLiteMode(bool liteMode);


extern "C" PROTOWRAPPER_API void WFCAPI setTimeOffset(int second);


extern "C" PROTOWRAPPER_API int WFCAPI getRoutePort();


extern "C" PROTOWRAPPER_API const char* WFCAPI getHost(size_t *retlen);


extern "C" PROTOWRAPPER_API void WFCAPI setDBPath(const char *cpath, size_t path_len);


extern "C" PROTOWRAPPER_API void WFCAPI setConnectionStatusListener(fun_connection_callback callback);


extern "C" PROTOWRAPPER_API void WFCAPI setReceiveMessageListener(fun_receive_message_callback receiveCallback, fun_recall_message_callback recallCallback, fun_delete_message_callback deleteCallback, fun_global_string_callback deliveryCallback, fun_global_string_callback readedCallback);


extern "C" PROTOWRAPPER_API void WFCAPI setUserInfoUpdateListener(fun_global_string_callback callback);


extern "C" PROTOWRAPPER_API void WFCAPI setGroupInfoUpdateListener(fun_global_string_callback callback);


extern "C" PROTOWRAPPER_API void WFCAPI setGroupMemberUpdateListener(fun_global_string_callback callback);


extern "C" PROTOWRAPPER_API void WFCAPI setFriendUpdateListener(fun_global_string_callback callback);


extern "C" PROTOWRAPPER_API void WFCAPI setFriendRequestListener(fun_global_string_callback callback);


extern "C" PROTOWRAPPER_API void WFCAPI setSettingUpdateListener(fun_global_void_callback callback);


extern "C" PROTOWRAPPER_API void WFCAPI setChannelInfoUpdateListener(fun_global_string_callback callback);

extern "C" PROTOWRAPPER_API void WFCAPI setJoinGroupRequestUpdateListener(fun_global_void_callback callback);

extern "C" PROTOWRAPPER_API void WFCAPI setDomainInfoUpdateListener(fun_global_string_callback callback);


extern "C" PROTOWRAPPER_API void WFCAPI setConnectToServerListener(fun_connecting_to_server_callback connectingCB, fun_connected_to_server_callback connectedCB);


extern "C" PROTOWRAPPER_API void WFCAPI setTrafficDataListener(fun_global_int_int_callback callback);


extern "C" PROTOWRAPPER_API void WFCAPI setErrorEventListener(fun_global_int_sring_callback callback);


extern "C" PROTOWRAPPER_API void WFCAPI setConferenceEventListener(fun_global_string_callback callback);


extern "C" PROTOWRAPPER_API void WFCAPI setOnlineEventListener(fun_global_string_callback callback);


extern "C" PROTOWRAPPER_API void WFCAPI setSecretChatStateListener(fun_global_int_sring_callback callback);


extern "C" PROTOWRAPPER_API void WFCAPI setSecretMessageBurnStateListener(fun_global_int_sring_callback startBurnCB, fun_global_string_callback burnedCB);