imclient/lib/src/ffi/wfclient_bindings.dart

// GENERATED by scripts/gen_ffi_bindings.py from scripts/wfc_functions.json
// （源头是 marslib/include/WFClient.h）。请勿手工修改；接口变更后重新生成。
// ignore_for_file: non_constant_identifier_names
import 'dart:ffi';

typedef Native_fun_global_string_callback = Void Function(Pointer<Char>, Size);
typedef Native_fun_global_int_int_callback = Void Function(Int32, Int32);
typedef Native_fun_global_int_sring_callback = Void Function(Int32, Pointer<Char>, Size);
typedef Native_fun_global_void_callback = Void Function();
typedef Native_fun_connection_callback = Void Function(Int32);
typedef Native_fun_receive_message_callback = Void Function(Pointer<Char>, Size, Bool);
typedef Native_fun_recall_message_callback = Void Function(Pointer<Char>, Size, Int64);
typedef Native_fun_delete_message_callback = Void Function(Int64);
typedef Native_fun_connecting_to_server_callback = Void Function(Pointer<Char>, Size, Pointer<Char>, Size);
typedef Native_fun_connected_to_server_callback = Void Function(Pointer<Char>, Size, Pointer<Char>, Size, Int32);
typedef Native_fun_general_void_success_callback = Void Function(Pointer<Void>, Int32);
typedef Native_fun_general_string_success_callback = Void Function(Pointer<Void>, Int32, Pointer<Char>, Size);
typedef Native_fun_general_error_callback = Void Function(Pointer<Void>, Int32, Int32);
typedef Native_fun_sendMessage_success_callback = Void Function(Pointer<Void>, Int32, Long, Int64, Int64);
typedef Native_fun_sendMessage_prepared_callback = Void Function(Pointer<Void>, Int32, Long, Int64);
typedef Native_fun_sendMessage_progress_callback = Void Function(Pointer<Void>, Int32, Long, Int32, Int32);
typedef Native_fun_sendMessage_media_uploaded_callback = Void Function(Pointer<Void>, Int32, Long, Pointer<Char>, Size);
typedef Native_fun_sendMessage_error_callback = Void Function(Pointer<Void>, Int32, Long, Int32);
typedef Native_fun_uploadMedia_progress_callback = Void Function(Pointer<Void>, Int32, Int32, Int32);

/// WFClient C API 绑定。所有函数惰性解析：动态库中缺失的符号只在调用时报错。
class WFClientBindings {
  WFClientBindings(this._lib);

  final DynamicLibrary _lib;

  late final void Function(Pointer<Char>) releaseDllString =
      _lib.lookupFunction<Void Function(Pointer<Char>), void Function(Pointer<Char>)>('releaseDllString');

  late final void Function(Pointer<Char>, int) setAppName =
      _lib.lookupFunction<Void Function(Pointer<Char>, Size), void Function(Pointer<Char>, int)>('setAppName');

  late final void Function(int) setHeartBeatInterval =
      _lib.lookupFunction<Void Function(Int32), void Function(int)>('setHeartBeatInterval');

  late final void Function(Pointer<Char>, int) setAppDataPath =
      _lib.lookupFunction<Void Function(Pointer<Char>, Size), void Function(Pointer<Char>, int)>('setAppDataPath');

  late final void Function(Pointer<Char>, int) setPackageName =
      _lib.lookupFunction<Void Function(Pointer<Char>, Size), void Function(Pointer<Char>, int)>('setPackageName');

  late final void Function(bool) useDataVerify =
      _lib.lookupFunction<Void Function(Bool), void Function(bool)>('useDataVerify');

  late final void Function(int) useEncryptMaxMinutes =
      _lib.lookupFunction<Void Function(Int32), void Function(int)>('useEncryptMaxMinutes');

  late final void Function(int, bool) setUseKcp =
      _lib.lookupFunction<Void Function(Int32, Bool), void Function(int, bool)>('setUseKcp');

  late final bool Function() isUseKcp =
      _lib.lookupFunction<Bool Function(), bool Function()>('isUseKcp');

  late final void Function(bool, Pointer<Pointer<Char>>, Pointer<Size>, int) useTls =
      _lib.lookupFunction<Void Function(Bool, Pointer<Pointer<Char>>, Pointer<Size>, Size), void Function(bool, Pointer<Pointer<Char>>, Pointer<Size>, int)>('useTls');

  late final void Function() useSM4 =
      _lib.lookupFunction<Void Function(), void Function()>('useSM4');

  late final void Function() useAES256 =
      _lib.lookupFunction<Void Function(), void Function()>('useAES256');

  late final void Function() useTcpShortLink =
      _lib.lookupFunction<Void Function(), void Function()>('useTcpShortLink');

  late final bool Function() isTcpShortLink =
      _lib.lookupFunction<Bool Function(), bool Function()>('isTcpShortLink');

  late final void Function(bool) setLiteMode =
      _lib.lookupFunction<Void Function(Bool), void Function(bool)>('setLiteMode');

  late final void Function(int) setTimeOffset =
      _lib.lookupFunction<Void Function(Int32), void Function(int)>('setTimeOffset');

  late final int Function() getRoutePort =
      _lib.lookupFunction<Int32 Function(), int Function()>('getRoutePort');

  late final Pointer<Char> Function(Pointer<Size>) getHost =
      _lib.lookupFunction<Pointer<Char> Function(Pointer<Size>), Pointer<Char> Function(Pointer<Size>)>('getHost');

  late final void Function(Pointer<Char>, int) setDBPath =
      _lib.lookupFunction<Void Function(Pointer<Char>, Size), void Function(Pointer<Char>, int)>('setDBPath');

  late final void Function(Pointer<NativeFunction<Void Function(Int32)>>) setConnectionStatusListener =
      _lib.lookupFunction<Void Function(Pointer<NativeFunction<Void Function(Int32)>>), void Function(Pointer<NativeFunction<Void Function(Int32)>>)>('setConnectionStatusListener');

  late final void Function(Pointer<NativeFunction<Void Function(Pointer<Char>, Size, Bool)>>, Pointer<NativeFunction<Void Function(Pointer<Char>, Size, Int64)>>, Pointer<NativeFunction<Void Function(Int64)>>, Pointer<NativeFunction<Void Function(Pointer<Char>, Size)>>, Pointer<NativeFunction<Void Function(Pointer<Char>, Size)>>) setReceiveMessageListener =
      _lib.lookupFunction<Void Function(Pointer<NativeFunction<Void Function(Pointer<Char>, Size, Bool)>>, Pointer<NativeFunction<Void Function(Pointer<Char>, Size, Int64)>>, Pointer<NativeFunction<Void Function(Int64)>>, Pointer<NativeFunction<Void Function(Pointer<Char>, Size)>>, Pointer<NativeFunction<Void Function(Pointer<Char>, Size)>>), void Function(Pointer<NativeFunction<Void Function(Pointer<Char>, Size, Bool)>>, Pointer<NativeFunction<Void Function(Pointer<Char>, Size, Int64)>>, Pointer<NativeFunction<Void Function(Int64)>>, Pointer<NativeFunction<Void Function(Pointer<Char>, Size)>>, Pointer<NativeFunction<Void Function(Pointer<Char>, Size)>>)>('setReceiveMessageListener');

  late final void Function(Pointer<NativeFunction<Void Function(Pointer<Char>, Size)>>) setUserInfoUpdateListener =
      _lib.lookupFunction<Void Function(Pointer<NativeFunction<Void Function(Pointer<Char>, Size)>>), void Function(Pointer<NativeFunction<Void Function(Pointer<Char>, Size)>>)>('setUserInfoUpdateListener');

  late final void Function(Pointer<NativeFunction<Void Function(Pointer<Char>, Size)>>) setGroupInfoUpdateListener =
      _lib.lookupFunction<Void Function(Pointer<NativeFunction<Void Function(Pointer<Char>, Size)>>), void Function(Pointer<NativeFunction<Void Function(Pointer<Char>, Size)>>)>('setGroupInfoUpdateListener');

  late final void Function(Pointer<NativeFunction<Void Function(Pointer<Char>, Size)>>) setGroupMemberUpdateListener =
      _lib.lookupFunction<Void Function(Pointer<NativeFunction<Void Function(Pointer<Char>, Size)>>), void Function(Pointer<NativeFunction<Void Function(Pointer<Char>, Size)>>)>('setGroupMemberUpdateListener');

  late final void Function(Pointer<NativeFunction<Void Function(Pointer<Char>, Size)>>) setFriendUpdateListener =
      _lib.lookupFunction<Void Function(Pointer<NativeFunction<Void Function(Pointer<Char>, Size)>>), void Function(Pointer<NativeFunction<Void Function(Pointer<Char>, Size)>>)>('setFriendUpdateListener');

  late final void Function(Pointer<NativeFunction<Void Function(Pointer<Char>, Size)>>) setFriendRequestListener =
      _lib.lookupFunction<Void Function(Pointer<NativeFunction<Void Function(Pointer<Char>, Size)>>), void Function(Pointer<NativeFunction<Void Function(Pointer<Char>, Size)>>)>('setFriendRequestListener');

  late final void Function(Pointer<NativeFunction<Void Function()>>) setSettingUpdateListener =
      _lib.lookupFunction<Void Function(Pointer<NativeFunction<Void Function()>>), void Function(Pointer<NativeFunction<Void Function()>>)>('setSettingUpdateListener');

  late final void Function(Pointer<NativeFunction<Void Function(Pointer<Char>, Size)>>) setChannelInfoUpdateListener =
      _lib.lookupFunction<Void Function(Pointer<NativeFunction<Void Function(Pointer<Char>, Size)>>), void Function(Pointer<NativeFunction<Void Function(Pointer<Char>, Size)>>)>('setChannelInfoUpdateListener');

  late final void Function(Pointer<NativeFunction<Void Function()>>) setJoinGroupRequestUpdateListener =
      _lib.lookupFunction<Void Function(Pointer<NativeFunction<Void Function()>>), void Function(Pointer<NativeFunction<Void Function()>>)>('setJoinGroupRequestUpdateListener');

  late final void Function(Pointer<NativeFunction<Void Function(Pointer<Char>, Size)>>) setDomainInfoUpdateListener =
      _lib.lookupFunction<Void Function(Pointer<NativeFunction<Void Function(Pointer<Char>, Size)>>), void Function(Pointer<NativeFunction<Void Function(Pointer<Char>, Size)>>)>('setDomainInfoUpdateListener');

  late final void Function(Pointer<NativeFunction<Void Function(Pointer<Char>, Size, Pointer<Char>, Size)>>, Pointer<NativeFunction<Void Function(Pointer<Char>, Size, Pointer<Char>, Size, Int32)>>) setConnectToServerListener =
      _lib.lookupFunction<Void Function(Pointer<NativeFunction<Void Function(Pointer<Char>, Size, Pointer<Char>, Size)>>, Pointer<NativeFunction<Void Function(Pointer<Char>, Size, Pointer<Char>, Size, Int32)>>), void Function(Pointer<NativeFunction<Void Function(Pointer<Char>, Size, Pointer<Char>, Size)>>, Pointer<NativeFunction<Void Function(Pointer<Char>, Size, Pointer<Char>, Size, Int32)>>)>('setConnectToServerListener');

  late final void Function(Pointer<NativeFunction<Void Function(Int32, Int32)>>) setTrafficDataListener =
      _lib.lookupFunction<Void Function(Pointer<NativeFunction<Void Function(Int32, Int32)>>), void Function(Pointer<NativeFunction<Void Function(Int32, Int32)>>)>('setTrafficDataListener');

  late final void Function(Pointer<NativeFunction<Void Function(Int32, Pointer<Char>, Size)>>) setErrorEventListener =
      _lib.lookupFunction<Void Function(Pointer<NativeFunction<Void Function(Int32, Pointer<Char>, Size)>>), void Function(Pointer<NativeFunction<Void Function(Int32, Pointer<Char>, Size)>>)>('setErrorEventListener');

  late final void Function(Pointer<NativeFunction<Void Function(Pointer<Char>, Size)>>) setConferenceEventListener =
      _lib.lookupFunction<Void Function(Pointer<NativeFunction<Void Function(Pointer<Char>, Size)>>), void Function(Pointer<NativeFunction<Void Function(Pointer<Char>, Size)>>)>('setConferenceEventListener');

  late final void Function(Pointer<NativeFunction<Void Function(Pointer<Char>, Size)>>) setOnlineEventListener =
      _lib.lookupFunction<Void Function(Pointer<NativeFunction<Void Function(Pointer<Char>, Size)>>), void Function(Pointer<NativeFunction<Void Function(Pointer<Char>, Size)>>)>('setOnlineEventListener');

  late final void Function(Pointer<NativeFunction<Void Function(Int32, Pointer<Char>, Size)>>) setSecretChatStateListener =
      _lib.lookupFunction<Void Function(Pointer<NativeFunction<Void Function(Int32, Pointer<Char>, Size)>>), void Function(Pointer<NativeFunction<Void Function(Int32, Pointer<Char>, Size)>>)>('setSecretChatStateListener');

  late final void Function(Pointer<NativeFunction<Void Function(Int32, Pointer<Char>, Size)>>, Pointer<NativeFunction<Void Function(Pointer<Char>, Size)>>) setSecretMessageBurnStateListener =
      _lib.lookupFunction<Void Function(Pointer<NativeFunction<Void Function(Int32, Pointer<Char>, Size)>>, Pointer<NativeFunction<Void Function(Pointer<Char>, Size)>>), void Function(Pointer<NativeFunction<Void Function(Int32, Pointer<Char>, Size)>>, Pointer<NativeFunction<Void Function(Pointer<Char>, Size)>>)>('setSecretMessageBurnStateListener');
